# fp

./: Cargo.toml  README.md  foo.md  install.sh
.cargo-husky/hooks/: pre-commit
.github/workflows/: autobump.yml  ci.yml  release.yml
assets/: fp-skill.md
assets/fp-hooks/hooks/: hooks.json  pre-tool-use-guard.sh  session-start.sh
docs/adr/: 0001-fp-system-architecture.md  0002-fp-improvements-auth-logs-stack-notifications.md  0003-stacked-pr-rebase-onto-strategy.md  0004-merge-downstream-rebase-and-progress-logging.md  0005-merge-method-detection.md  0006-task-surface-completeness.md  0007-pr-communication-and-demo-upload.md  0008-monorepo-multi-app-workspace-coordination.md
src/: agent.rs  agent_manifest_test.rs  agent_test.rs  app_config.rs  app_config_test.rs  ci.rs  ci_test.rs  commands.rs  commands_test.rs  credentials.rs  credentials_test.rs  date.rs  display.rs  display_test.rs  feature.rs  feature_test.rs  github.rs  github_test.rs  lifecycle_test.rs  main.rs  merge.rs  merge_test.rs  model.rs  notify_ext_test.rs  notify_test.rs  platform.rs  process_store.rs  process_store_test.rs  profile.rs  profile_test.rs  repo_test.rs  shell.rs  shell_test.rs  stack.rs  stack_test.rs  store.rs  store_test.rs  tasks.rs  tasks_test.rs  threads_test.rs  (+3 more)
tests/: cli_flags.rs  install_skills.rs
