[package]
name = "fp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "multipart"], default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
bench_scraper = "0.4"
time = "0.3"

[dev-dependencies]
tempfile = "3"
mockito = "1"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
